--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
-          GH_TOKEN: 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
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: 04f68e25f738045f9fc85369bda6817b
           TIMEZONE: Asia/Seoul
